@@ -118,6 +118,9 @@
 #undef CONFIG_RTAI_OPT_PIPE_NRDEV
 
 /* Kconfig */
+#undef CONFIG_RTAI_OPT_WATCHDOG
+
+/* Kconfig */
 #undef CONFIG_RTAI_REVISION_LEVEL
 
 /* Kconfig */
