@@ -1,5 +1,8 @@
 2005-02-19  Philippe Gerum  <rpm@xenomai.org>
 
+	* nucleus/pod.c (xnpod_announce_tick): Add watchdog support for
+	detecting runaway threads.
+
 	* include/nucleus/asm-*/syscall.h: Use the *_inatomic forms of
 	copy to/from_user() macros to bypass might_sleep() checks: syscall
 	issuers cannot fault since all their memory is mlocked, and
